Fri Dec 21 10:05:12 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac include/replacements.h src/replacements/vasprintf.c:
	* win32/config.h:
	- applied modified patch #1848920

Thu Dec 20 22:56:34 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c src/dblib/unittests/common.h:
	* src/dblib/unittests/setnull.c src/dblib/unittests/thread.c:
	- remore warnings

Thu Dec 20 17:46:03 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c:
	- improve cursor attribute setting
	- fix a small issue with unixODBC and 64 bit

Wed Dec 19 16:08:17 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cursor3.c src/odbc/unittests/cursor4.c:
	- remove warnings

Wed Dec 19 15:35:22 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/attributes.c(added) src/odbc/unittests/attributes.in(added):
	* src/odbc/unittests/Makefile.am: add a test for statement attributes
	* src/odbc/unittests/describecol.c: fix possible core

Tue Dec 18 09:09:27 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/cursor3.c(added):
	* src/odbc/unittests/cursor4.c(added) src/odbc/unittests/cursor5.c(added):
	- merged test from Sebastien FLAESCH

Sun Dec 16 19:08:38 EST 2007	JK Lowden <jklowden@freetds.org>
	* doc/api_status.txt 
	- set useless db-lib functions' status to 'never'

Sun Dec 16 16:58:35 EST 2007	JK Lowden <jklowden@freetds.org>
	* doc/Makefile.am doc/bsqlodbc.txt doc/osql.txt
	* doc/userguide.sgml
	- updated for next release

Fri Dec 14 11:23:08 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/test-other.sh: fix some strange echo portability
	* src/dblib/unittests/null.c src/dblib/unittests/null2.c:
	- make ignore less verbose

Thu Dec 13 23:45:55 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/apps/Makefile.am build bsqlodbc out-of-tree
	* src/dblib/unittests/null.c prettier & correct, passes
