@@ -1,3 +1,9 @@
+Fri Dec 21 11:38:47 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/common.c src/odbc/unittests/common.h:
+	* src/odbc/unittests/cursor3.c src/odbc/unittests/cursor4.c:
+	* src/odbc/unittests/cursor5.c:
+	- cursor tests should work
+
 Fri Dec 21 10:05:12 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* configure.ac include/replacements.h src/replacements/vasprintf.c:
 	* win32/config.h:
